--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "php": "^7.4|^8.0"
     },
     "config": {
-        "optimize-autoloader": true,
+        "optimize-autoloader": false,
         "sort-packages": true
     }
 }
